--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -18,3 +18,9 @@ footer p {
     color: white;
     font-size: 1.5rem;
 }
+
+@media screen and (max-width:768px) {
+    footer {
+        padding: 0 10px;
+    }
+}
